--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -29,6 +29,12 @@
 	initial-value: #e8e8e8;
 }
 
+@property --dark-gray {
+	syntax: "<color>";
+	inherits: true;
+	initial-value: gray;
+}
+
 @property --white {
 	syntax: "<color>";
 	inherits: true;
@@ -45,6 +51,12 @@
 	syntax: "<color>";
 	inherits: true;
 	initial-value: #a08e64;
+}
+
+@property --light-blue {
+	syntax: "<color>";
+	inherits: true;
+	initial-value: #60c2ff;
 }
 
 @property --fz-tiny {
@@ -84,6 +96,8 @@
 	--black: #000000;
 	--light-green: #5ba36a;
 	--light-gray: #e8e8e8;
+    --dark-gray: gray;
+    --light-blue: #60c2ff;
 
 	--fz-tiny: 0.75rem;
 	--fz-small: 0.875rem;
