--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -35,6 +35,12 @@
 	initial-value: gray;
 }
 
+@property --medium-gray {
+	syntax: "<color>";
+	inherits: true;
+	initial-value: #1F1F1F;
+}
+
 @property --white {
 	syntax: "<color>";
 	inherits: true;
@@ -51,6 +57,12 @@
 	syntax: "<color>";
 	inherits: true;
 	initial-value: #a08e64;
+}
+
+@property --dark-gold {
+	syntax: "<color>";
+	inherits: true;
+	initial-value: #57461f;
 }
 
 @property --light-blue {
@@ -92,12 +104,15 @@
 :root {
 	--dark-green: #396e44;
 	--light-gold: #74643e;
+	--dark-gold: #57461f;
 	--white: #ffffff;
 	--black: #000000;
 	--light-green: #5ba36a;
 	--light-gray: #e8e8e8;
     --dark-gray: gray;
     --light-blue: #60c2ff;
+	--medium-gray: #1F1F1F;
+
 
 	--fz-tiny: 0.75rem;
 	--fz-small: 0.875rem;
