--- a/static/styles/bin/bin.css
+++ b/static/styles/bin/bin.css
@@ -3,11 +3,16 @@ h1 {
     font-size: var(--fz-big);
 }
 
+.bin {
+    margin-bottom: 5em;
+}
+
 .bin-table {
     width: 100%;
     border-top: 2px solid var(--light-gray);
     border-bottom: 2px solid var(--light-gray);
     border-collapse: collapse;
+    margin-bottom: 3em;
 }
 
 .head-row {
@@ -44,6 +49,59 @@ h1 {
 
 .delete-button {
     border: none;
+}
+
+
+/* Форма оформления заказа */
+.order {
+    width: 580px;
+    padding: 2em 3em;
+    border: 1px solid var(--light-gray);
+    box-shadow: 1px 3px 2px var(--light-gray);
+    border-radius: 12px;
+    margin: auto;
+}
+
+.order-form {
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+}
+
+.form-title {
+    text-align: center;
+    font-size: var(--fz-big);
+    margin-bottom: 2em;
+}
+
+.result-sum, .magazine-label {
+    color: var(--dark-gray)
+}
+
+.sum {
+    color: var(--dark-green);
+    font-size: var(--fz-big);
+}
+
+#magazine {
+    width: 280px;
+    padding: 0.5em 2em;
+    border: 1px solid var(--dark-gray);
+    border-radius: 100px;
+    outline: none;
+}
+
+input[type="submit"] {
+    width: max-content;
+    margin: auto;
+    margin-top: 4em;
+    padding: 0.5em 4em;
+    
+    border: none;
+    border-radius: 100px;
+
+    background-color: var(--dark-green);
+    color: var(--white);
 }
 
 @media (max-width: 1100px) {
