fix: fix bug with saving info about delete product

--- a/static/styles/bin/bin.css
+++ b/static/styles/bin/bin.css
@@ -134,6 +134,10 @@ input[type="submit"] {
     .product-image {
         width: 100px;
     }
+
+    .order {
+        width: 350px;
+    }
 }
 
 @media (max-width: 650px) {
