--- a/static/styles/products_page/products_page.css
+++ b/static/styles/products_page/products_page.css
@@ -121,6 +121,8 @@ h1 {
 .card > img {
     align-self: center;
     margin-bottom: 2em;
+    max-width: 120px;
+    height: auto;
 }
 
 .product-category {
@@ -135,7 +137,6 @@ h1 {
 }
 
 .card-bottom {
-    padding-top: 1em;
     display: flex;
     gap: 7em;
     align-items: center;
